# VGW

./: CMakeLists.txt  README.md  vgw.sln
libtcpip/: Resource.aps  libtcpip.cpp  libtcpip.h  libtcpip.vcxproj  netstack.cpp  netstack.h
vgw/: Resource.aps  Resource.rc  checksum.h  env.cpp  env.h  etharp.cpp  etharp.h  ethernet.cpp  ethernet.h  gw.h  icmp.cpp  icmp.h  ipv4.cpp  ipv4.h  main.cpp  subnat.cpp  sysnat.cpp  udp.cpp  udp.h  vgw.vcxproj  vgw.vcxproj.filters
vgw/io/: BinaryReader.h  MemoryStream.h  SeekOrigin.h  Stream.h
vgw/packet/: IPEndPoint.cpp  IPEndPoint.h  IPFrame.cpp  IPFrame.h  IcmpFrame.cpp  IcmpFrame.h  Ipep.cpp  Ipep.h  UdpFrame.cpp  UdpFrame.h
vgw/packet/native/: icmp.cpp  icmp.h  udp.cpp  udp.h
